# RNetMsgBroker

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE_TODO.md  R-Net.json  README.md  RNetMsgBroker_de_DE.ts  RNetMsgBroker_global.h  SECURITY.md  VERSION.txt  result.txt  rnetmsgbroker.cpp  rnetmsgbroker.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: cmake.yml
docs/: CSV_FORMAT.md  RNET_JSON_SCHEMA.md  STARTUP_SEQUENCE.md  UNKNOWN_FRAMES.md
scripts/: build.sh  candump_to_csv.sh  check.sh  deliver.py  deliver.sh  list_unknown_observed.py
testapp/: main.cpp
testdata/: candump.txt  candump_open_rnet_sample.txt  candump_sample.txt
